# battery-roi-analyzer

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: scrape.yml
.opencode/context/: navigation.md  paths.json
.tmp/external-context/: .manifest.json
.tmp/external-context/home-assistant-core/: config-flow-and-options-flow.md  const-py-conventions.md  data-update-coordinator.md  diagnostics-platform.md  hacs-and-manifest-requirements.md  recorder-statistics-api.md  repairs-platform.md  sensor-entity-basics.md  translations.md
.tmp/external-context/numpy-financial/: irr-npv.md  npv-irr.md
.tmp/external-context/pandas/: resample-asfreq-energy-timeseries.md
.tmp/external-context/pytest-homeassistant-custom-component/: custom-component-test-setup.md
.tmp/sessions/2026-07-15-battery-roi-analyzer/: context.md
.tmp/tasks/battery-roi-analyzer/: subtask_01.json  subtask_02.json  subtask_03.json  task.json  (+10 more)
custom_components/battery_roi/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  finance.py  manifest.json  provider.py  recommendation.py  repairs.py  sensor.py  services.yaml  simulator.py  statistics.py  strings.json
data/: fixed_prices.json
docs/dashboards/: 01-annual-saving.yaml  02-payback-period.yaml  03-self-consumption.yaml  04-cycles-per-year.yaml  05-monthly-heatmap.yaml  06-sankey.yaml  07-provider-summary.yaml  08-provider-bar-chart.yaml  README.md
scraper/: independer_scraper.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_finance.py  test_simulator.py
(+13 files in other folders)
