[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-roi-analyzer"
version = "0.1.0"
description = "Home Assistant custom integration simulating home battery ROI."
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-homeassistant-custom-component",
  "numpy>=1.26.0",
  "pandas>=2.1.0",
  "numpy-financial>=1.0.0",
  "homeassistant",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
